--- a/BaseProject/Web.config
+++ b/BaseProject/Web.config
@@ -16,6 +16,13 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+	  <!-- Momo Configure -->
+	  <add key="partnerCode_Momo" value="MOMOOJOI20210710"/>
+	  <add key="accessKey_Momo" value="iPXneGmrJH0G8FOP"/>
+	  <add key="secretKey_Momo" value="sFcbSGRSJjwGxwhhcEktCHWYUuTuPNDB"/>
+	  <add key="endPoint_Momo" value="https://test-payment.momo.vn/v2/gateway/api/create"/>
+	  <add key="redirectUrl_Momo" value="https://localhost:44377/Pay/MomoProcessing"/>
+	  <add key="ipnUrl_Momo" value="https://webhook.site/00642294-4421-43fd-8415-7e195ddcdad8"/>
   </appSettings>
   <system.web>
 	  <authentication mode="Forms">
@@ -32,7 +39,12 @@
 	  -->
 
 
-  </system.webServer>
+  <handlers>
+      <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
+      <remove name="OPTIONSVerbHandler" />
+      <remove name="TRACEVerbHandler" />
+      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
+    </handlers></system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
