--- a/BaseProject/packages.config
+++ b/BaseProject/packages.config
@@ -11,6 +11,8 @@
   <package id="Microsoft.AspNet.Mvc" version="5.2.9" targetFramework="net472" />
   <package id="Microsoft.AspNet.Razor" version="3.2.9" targetFramework="net472" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net472" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.9" targetFramework="net472" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.9" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.9" targetFramework="net472" />
   <package id="Microsoft.AspNetCore.Cryptography.Internal" version="7.0.5" targetFramework="net472" />
   <package id="Microsoft.AspNetCore.Cryptography.KeyDerivation" version="7.0.5" targetFramework="net472" />
