--- a/BaseProject/Web.config
+++ b/BaseProject/Web.config
@@ -16,13 +16,18 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+	  <!-- Email -->
+	  <add key="PasswordEmail" value="wftyzvjdtlgjmoum" />
+	  <add key="Email" value="leuleuzeze22@gmail.com" />
+	
+	 
 	  <!-- Momo Configure -->
-	  <add key="partnerCode_Momo" value="MOMOOJOI20210710"/>
-	  <add key="accessKey_Momo" value="iPXneGmrJH0G8FOP"/>
-	  <add key="secretKey_Momo" value="sFcbSGRSJjwGxwhhcEktCHWYUuTuPNDB"/>
-	  <add key="endPoint_Momo" value="https://test-payment.momo.vn/v2/gateway/api/create"/>
-	  <add key="redirectUrl_Momo" value="https://localhost:44377/Pay/MomoProcessing"/>
-	  <add key="ipnUrl_Momo" value="https://webhook.site/00642294-4421-43fd-8415-7e195ddcdad8"/>
+	  <add key="partnerCode_Momo" value="MOMOOJOI20210710" />
+	  <add key="accessKey_Momo" value="iPXneGmrJH0G8FOP" />
+	  <add key="secretKey_Momo" value="sFcbSGRSJjwGxwhhcEktCHWYUuTuPNDB" />
+	  <add key="endPoint_Momo" value="https://test-payment.momo.vn/v2/gateway/api/create" />
+	  <add key="redirectUrl_Momo" value="https://localhost:44385/Pay/MomoProcessing" />
+	  <add key="ipnUrl_Momo" value="https://webhook.site/00642294-4421-43fd-8415-7e195ddcdad8" />
   </appSettings>
   <system.web>
 	  <authentication mode="Forms">
