--- a/BaseProject/Web.config
+++ b/BaseProject/Web.config
@@ -9,47 +9,44 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-	  <add name="DefaultConnection" connectionString="Server=LAPTOP-EMASLQHA\SQLEXPRESS;Initial Catalog=BaseProject;Integrated Security=True;" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Server=LAPTOP-EMASLQHA\SQLEXPRESS;Initial Catalog=BaseProject;Integrated Security=True;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-	  <!-- Email -->
-	  <add key="PasswordEmail" value="wftyzvjdtlgjmoum" />
-	  <add key="Email" value="leuleuzeze22@gmail.com" />
-	
-	 
-	  <!-- Momo Configure -->
-	  <add key="partnerCode_Momo" value="MOMOOJOI20210710" />
-	  <add key="accessKey_Momo" value="iPXneGmrJH0G8FOP" />
-	  <add key="secretKey_Momo" value="sFcbSGRSJjwGxwhhcEktCHWYUuTuPNDB" />
-	  <add key="endPoint_Momo" value="https://test-payment.momo.vn/v2/gateway/api/create" />
-	  <add key="redirectUrl_Momo" value="https://localhost:44385/Pay/MomoProcessing" />
-	  <add key="ipnUrl_Momo" value="https://webhook.site/00642294-4421-43fd-8415-7e195ddcdad8" />
+    <!-- Email -->
+    <add key="PasswordEmail" value="wftyzvjdtlgjmoum" />
+    <add key="Email" value="leuleuzeze22@gmail.com" />
+    <!-- Momo Configure -->
+    <add key="partnerCode_Momo" value="MOMOOJOI20210710" />
+    <add key="accessKey_Momo" value="iPXneGmrJH0G8FOP" />
+    <add key="secretKey_Momo" value="sFcbSGRSJjwGxwhhcEktCHWYUuTuPNDB" />
+    <add key="endPoint_Momo" value="https://test-payment.momo.vn/v2/gateway/api/create" />
+    <add key="redirectUrl_Momo" value="https://localhost:44385/Pay/MomoProcessing" />
+    <add key="ipnUrl_Momo" value="https://webhook.site/00642294-4421-43fd-8415-7e195ddcdad8" />
   </appSettings>
   <system.web>
-	  <authentication mode="Forms">
-		  <forms loginUrl="~/Admin/Account/Login" timeout="3600" />
-	  </authentication>
+    <authentication mode="Forms">
+      <forms loginUrl="~/Admin/Account/Login" timeout="3600" />
+    </authentication>
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
   </system.web>
   <system.webServer>
-	  <!--
+    <!--
 	  <modules>
       <remove name="FormsAuthentication" />
     </modules>
 	  -->
-
-
-  <handlers>
+    <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
       <remove name="OPTIONSVerbHandler" />
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
-    </handlers></system.webServer>
+    </handlers>
+  </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
